--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -2,7 +2,7 @@
   <img src="/home.webp" class="w-screen object-cover object-center">
 
   <div class="flex flex-col items-center justify-center relative z-10">
-    <img src="/logo.svg" class="w-100 mb-10 md:relative md:absolute md:bottom-12 mt-10 md:mt-0"> <!-- Agrega mt-8 solo en dispositivos móviles -->
+    <img src="/logo.webp" class="w-100 mb-10 md:relative md:absolute md:bottom-12 mt-10 md:mt-0 sm:mt-8" style="height: 200px;">
     <h2 class="text-2xl text-red-700 tracking-tighter font-normal text-black text-center">
       DE NUESTRA FAMILIA A LA TUYA
     </h2>
