--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -9,14 +9,14 @@
                         class="flex flex-row items-center justify-between md:justify-start"
                 >
                     <a
-                            class="text-black hover:text-black/50 gap-4 items-center tracking-tighter inline-flex font-bold ml-2 text-xl"
+
                             href="/" title="linke to main page"
                     >
                         <img src="/logo.svg" class="size-10  object-cover object-center">
                     </a>
                     <button
                             @click="open = !open"
-                            class="inline-flex items-center justify-center p-2 text-zinc-400 hover:text-cyan-300 focus:outline-none focus:text-black md:hidden"
+                            class="inline-flex items-center justify-center p-2 text-zinc-400 hover:text-red-700 focus:outline-none focus:text-black md:hidden"
                     >
                         <svg
                                 class="w-6 h-6"
