--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -151,6 +151,62 @@ import {designwork} from "../../data/designwork.json";
               </div>
             </div>
           </li>
+          <li class="relative">
+            <button
+                class="w-full p-4 text-left"
+                @click="selected !== 3 ? selected = 3 : selected = null"
+                type="button"
+            >
+              <div class="items-center flex justify-between text-black">
+                <p class="text-lg tracking-tight text-black">
+                  Panqueques
+                </p>
+                <svg
+                    class="ml-4 duration-200 h-5 inline rotate-180 transform transition-transform w-5"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                    :class="{'rotate-180': open, 'rotate-0': !open}"
+                >
+                  <path
+                      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+                      clip-rule="evenodd"
+                      fill-rule="evenodd"></path>
+                </svg
+                >
+              </div>
+            </button
+            >
+            <div
+                class="relative overflow-hidden duration-700 max-h-0 transition-all"
+                style=""
+                x-bind:style="selected == 3 ? 'max-height: ' + $refs.container3.scrollHeight + 'px' : ''"
+                x-ref="container3"
+            >
+              <div class="text-sm text-zinc-500 p-4 pt-0">
+
+                <table class="w-full divide-y divide-gray-200">
+                  <thead class="bg-red-700">
+                  <tr>
+                    <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider rounded-tl-2xl">
+                      Panqueques
+                    </th>
+                    <th class="px-6 py-3 text-right text-xs font-medium text-white uppercase tracking-wider rounded-tr-2xl">
+                      por docena
+                    </th>
+                  </tr>
+                  </thead>
+                  <tbody class="divide-y divide-gray-200">
+                  <tr>
+                    <td class="px-6 py-4">Panqueques</td>
+                    <td class="px-6 py-4 text-right">$2600</td>
+                  </tr>
+                  </tbody>
+                </table>
+
+              </div>
+            </div>
+
 
         </ul>
       </div>
