--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -37,32 +37,32 @@ import {designwork} from "../../data/designwork.json";
                     <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Carne (docena)</td>
-                    <td class="px-6 py-4 text-right">$1000</td>
+                    <td class="px-6 py-4">Criollas de carne (docena)</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
                     <td class="px-6 py-4">Pollo (docena)</td>
-                    <td class="px-6 py-4 text-right">$1000</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Discos para empanadas (2 unidades)</td>
-                    <td class="px-6 py-4 text-right">$2000</td>
+                    <td class="px-6 py-4">Queso y cebolla (docena)</td>
+                    <td class="px-6 py-4 text-right">$6000</td>
+                </tr>
+                <tr>
+                    <td class="px-6 py-4">Discos para empanadas (docena)</td>
+                    <td class="px-6 py-4 text-right">$1000</td>
                 </tr>
                 <tr>
                     <td class="px-6 py-4">Pascualina (docena)</td>
                     <td class="px-6 py-4 text-right">$2500</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Panqueques (docena)</td>
-                    <td class="px-6 py-4 text-right">$6000</td>
-                </tr>
-                <tr>
                     <td class="px-6 py-4">Masa para lasagna (unidad - 200 gramos)</td>
                     <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 <tr>
-                    <td class="px-6 py-4">Queso rallado (1kg)</td>
-                    <td class="px-6 py-4 text-right">$1600</td>
+                    <td class="px-6 py-4">Queso rallado (100 gramos)</td>
+                    <td class="px-6 py-4 text-right">$2000</td>
                 </tr>
                 <tr>
                     <td class="px-6 py-4">Crema de leche (100gr)</td>
