--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -14,7 +14,7 @@ import {designwork} from "../../data/designwork.json";
 
         <div class="items-center justify-center w-full flex flex-col py-8 shrink-0 snap-start"
              role="option" x-bind="disableNextAndPreviousButtons">
-            <img src="/empanada.png" alt=""
+            <img src="/empanada.webp" alt=""
                  style="border-top-left-radius: 18px; border-top-right-radius: 18px; border-bottom-left-radius: 18px; border-bottom-right-radius: 18px;"/>
         </div>
 
